# pipes-mongodb

./: .travis.yml  README.md  pipes-mongodb.cabal
Pipes/: MongoDB.hs
Pipes/MongoDB/: Example.hs
test/: Test.hs
