name:                pipes-mongodb
version:             0.1.0.0
synopsis:            Stream results from MongoDB
description:         Stream results from MongoDB

homepage:            http://github.com/jb55/pipes-mongodb
license:             MIT
license-file:        LICENSE
author:              William Casarin
maintainer:          bill@casarin.me

category:            Database, Pipes
build-type:          Simple

cabal-version:       >=1.8
tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2

source-repository head
  type: git
  location: https://github.com/jb55/pipes-mongodb

library
  exposed-modules: Pipes.MongoDB
  build-depends: base >=4.5 && < 5
               , mongoDB
               , monad-control
               , pipes

Test-Suite test-pipes-mongodb
    type:       exitcode-stdio-1.0
    main-is:    test/Test.hs
    build-depends: base
                 , text
                 , mongoDB
                 , monad-control
                 , pipes
